--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,12 @@
     align-items: center;
     flex-direction: column;
 }
+
+.answer {
+    margin-top: 20px;
+    border: 3px solid red;
+    background-color: white;
+    color: red;
+    border-radius: 5px;
+    padding: 10px 20px;
+}
